--- a/เพลงชาติไทย.md
+++ b/เพลงชาติไทย.md
@@ -1,1 +1,7 @@
-เพลงชาติ
+ประเทศไทยรวมเลือดเนื้อชาติเชื้อไทย
+
+เป็นประชารัฐ ไผทของไทยทุกส่วน
+
+อยู่ดำรงคงไว้ได้ทั้งมวล
+
+ด้วยไทยล้วนหมาย รักสามัคคี
